# vellocet3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  export_include.sh  export_lib.sh  vellocet3d.sln
dep/inc/glad/: glad.h
dep/lib/: glfw3.lib  zlibstatic.lib
dep/lib/release/: BulletCollision.lib  BulletDynamics.lib  IrrXML.lib  LinearMath.lib  assimp-vc140-mt.lib  assimp.lib  glfw3.lib  zlibstatic.lib
inc/vel/: AABB.h  ActiveAnimation.h  Actor.h  Animation.h  App.h  Armature.h  ArmatureBone.h  AssetLoaderV2.h  AssetManager.h  AssetTrackers.h  Camera.h  CollisionWorld.h  Config.h  ConvexCastResult.h  Cubemap.h  CustomTriangleMesh.h  FontBitmap.h  GPU.h  HDR.h  ImageData.h  InfiniteHDR.h  InputState.h  Log.h  Material.h  MaterialAnimator.h  Mesh.h  MultiTweener.h  RaycastResult.h  RenderMode.h  RenderTarget.h  Renderable.h  Scene.h  Sensor.h  Shader.h  Stage.h  TextActor.h  Texture.h  TextureAnimator.h  Tweener.h  Vertex.h  (+4 more)
src/: AABB.cpp  Actor.cpp  App.cpp  Armature.cpp  ArmatureBone.cpp  AssetLoaderV2.cpp  AssetManager.cpp  BounceTweener.cpp  Camera.cpp  CollisionDebugDrawer.cpp  CollisionWorld.cpp  Config.cpp  CustomTriangleMesh.cpp  GPU.cpp  ImageData.cpp  Log.cpp  Material.cpp  MaterialAnimator.cpp  Mesh.cpp  MultiTweener.cpp  RaycastCallback.cpp  Renderable.cpp  Scene.cpp  Sensor.cpp  Stage.cpp  TextureAnimator.cpp  Transform.cpp  Tweener.cpp  Vertex.cpp  Window.cpp  functions.cpp
vellocet3d/: vellocet3d.vcxproj  vellocet3d.vcxproj.filters
vellocet3d/inc/dep/: json.hpp  plf_colony.h
vellocet3d/inc/vel/: App.h  AssetLoader.h  CollisionDebugDrawer.h  Config.h  GPU.h  InputState.h  Logger.h  Shader.h  Window.h  helpers.h
vellocet3d/inc/vel/assets/: AssetLoaderV2.h  AssetManager.h  AssetTrackers.h  Renderable.h  Shader.h
vellocet3d/inc/vel/assets/animation/: Animation.h
vellocet3d/inc/vel/assets/armature/: ActiveAnimation.h  Armature.h
vellocet3d/inc/vel/assets/material/: ImageData.h  Material.h  Texture.h
vellocet3d/inc/vel/assets/mesh/: Mesh.h  Vertex.h
vellocet3d/inc/vel/collision/: EllipsoidCollider.h  RayCaster.h
vellocet3d/inc/vel/dep/: sac.h
vellocet3d/inc/vel/helpers/: MultiTweener.h  Tweener.h  functions.h
vellocet3d/inc/vel/scene/: AssetLoader.h  AssetLoaderV2.h  CollisionDebugDrawer.h  GPU.h  Renderable.h  Scene.h  Shader.h
vellocet3d/inc/vel/scene/animation/: Animation.h  Channel.h
vellocet3d/inc/vel/scene/armature/: ActiveAnimation.h  Armature.h  ArmatureBone.h  Bone.h
vellocet3d/inc/vel/scene/material/: Material.h  Texture.h
vellocet3d/inc/vel/scene/mesh/: Bone.h  Mesh.h  Renderable.h  Texture.h  Vertex.h  VertexBoneData.h
vellocet3d/inc/vel/scene/stage/: Aabb.h  Actor.h  BroadphaseCallback.h  Camera.h  CollisionData.h  CollisionWorld.h  ContactTrigger.h  Controller.h  ConvexResult.h  RaycastCallback.h  RaycastResult.h  RenderCommand.h  Sensor.h  Stage.h  TRS.h  Transform.h
vellocet3d/inc/vel/scene/stage/collision/: CollisionDebugDrawer.h  CollisionWorld.h  Sensor.h
vellocet3d/src/: App.cpp  AssetLoader.cpp  CollisionDebugDrawer.cpp  Config.cpp  GPU.cpp  Logger.cpp  Window.cpp  helpers.cpp
vellocet3d/src/assets/: AssetLoaderV2.cpp  AssetManager.cpp  Renderable.cpp
vellocet3d/src/assets/armature/: Armature.cpp  ArmatureBone.cpp
vellocet3d/src/assets/mesh/: Mesh.cpp  Vertex.cpp
vellocet3d/src/collision/: EllipsoidCollider.cpp  RayCaster.cpp
vellocet3d/src/dep/: glad.c  stb_image.cpp
vellocet3d/src/helpers/: MultiTweener.cpp  Tweener.cpp  functions.cpp
vellocet3d/src/scene/: AssetLoader.cpp  AssetLoaderV2.cpp  CollisionDebugDrawer.cpp  GPU.cpp  Renderable.cpp  Scene.cpp
vellocet3d/src/scene/armature/: Armature.cpp  ArmatureBone.cpp  Bone.cpp
vellocet3d/src/scene/mesh/: Mesh.cpp  Vertex.cpp
vellocet3d/src/scene/stage/: Aabb.cpp  Actor.cpp  BroadphaseCallback.cpp  Camera.cpp  CollisionWorld.cpp  ContactTrigger.cpp  Controller.cpp  RaycastCallback.cpp  RenderCommand.cpp  Sensor.cpp  Stage.cpp  Transform.cpp
vellocet3d/src/scene/stage/collision/: CollisionDebugDrawer.cpp  CollisionWorld.cpp  RaycastCallback.cpp  Sensor.cpp
